# jobby_fork

./: .gitignore  README.md  example.py  pyproject.toml  requirements.in  requirements.txt  setup.py
jobby/: __init__.py  dag.py  dbt_cloud.py  manifest.py  operations.py  schemas.py  selector_generator.py
jobby/types/: dag.py  job.py  manifest.py  model.py
src/jobby/: __init__.py  dbt_cloud.py  operations.py  selector_generator.py
src/jobby/types/: job.py  manifest.py  model.py
tests/: test_selector_generation.py
