[project]
name = "jobby"
version = "0.0.1"
dependencies = [
    "requests",
    "pydantic",
    "networkx",
    "matplotlib",
    "pydot",
    'loguru',
    'dbt-core==1.3.0rc1'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
